# dr-sigmund

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
eval/: README.md  check.py  expected.py
sessions/: claude-seo-scan-001.md  claude-seo-session-001.md  dr-sigmund-self-session-001.md  enola-revenu-session-001-v3.md  enola-revenu-session-001-v4.md  enola-revenu-session-001.md
sigmund-mcp-server/: README.md  pyproject.toml  server.py
sigmund-symptom-scanner/: README.md  sigmund_scan.py
skill/sigmund/: MEMORY.md  SKILL.md  lab.py
skill/sigmund/examples/: enola-revenu-session-001.md
skill/sigmund/references/: case-studies.md  clinical-manual.md  forensic-intake.md  hermes-diagnostics.md  openclaw-diagnostics.md  pharmacy.md  recent-principles.md  runtime-adapters.md  safety.md  wild-pathologies.md
skill/sigmund/scripts/: cache-invalidation-scan.py  git-thrash-audit.py  injection-shaped-string-scan.py  memory-health-check.py  permission-bypass-audit.py  re-read-counter.py
skill/sigmund/templates/: discharge-summary.md  session-transcript.md
