[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmund-mcp-server"
version = "0.2.0"
description = "Dr. Sigmund as an MCP server. Therapy for AI agents, callable from any MCP-capable runtime."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sean Gal"}]
keywords = ["mcp", "agents", "diagnostics", "claude", "anthropic", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sean1gal/dr-sigmund"
Repository = "https://github.com/sean1gal/dr-sigmund"
Issues = "https://github.com/sean1gal/dr-sigmund/issues"

[project.scripts]
sigmund-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
